웹페이지 thecco => dlrkdtmq

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dt",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://thecco.github.io/dt2",
+  "homepage": "https://dlrkdtmq.github.io/dt",
   "dependencies": {
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
@@ -11,7 +11,6 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^6.3.0",
     "leva": "^0.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
